--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Page Not found!</title>
-		<link rel="stylesheet" href="404.css" />
-		<script type="module" src="404.js"></script>
+		<link rel="stylesheet" href="index.css" />
+		<script type="module" src="index.js"></script>
 		<link
 			rel="shortcut icon"
 			type="image/png"
