--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Page Not found!</title>
-		<link rel="stylesheet" href="index.css" />
-		<script type="module" src="index.js"></script>
+		<link rel="stylesheet" href="styles.css" />
+		<script type="module" src="app.js"></script>
 		<link
 			rel="shortcut icon"
 			type="image/png"
-			href="../assets/favicon.png"
+			href="./assets/favicon.png"
 		/>
 	</head>
 	<body>
