--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 		<link
 			rel="shortcut icon"
 			type="image/png"
-			href="./assets/favicon.png"
+			href="../assets/favicon.png"
 		/>
 	</head>
 	<body>
