--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 		/>
 	</head>
 	<body>
-		<h1 id="title">404</h1>
+		<h1 id="title"></h1>
 		<h2 id="desc">&ZeroWidthSpace;</h2>
 	</body>
 </html>
