Add defer attribute to main script tag

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Page Not found!</title>
 		<link rel="stylesheet" href="styles.css" />
-		<script type="module" src="app.js"></script>
+		<script type="module" src="app.js" defer></script>
 		<link
 			rel="shortcut icon"
 			type="image/png"
