:art: Update colour scheme

--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title>Page Not found!</title>
-		<link rel="stylesheet" href="styles.css" />
-		<script type="module" src="app.js" defer></script>
-		<link
-			rel="shortcut icon"
-			type="image/png"
-			href="../assets/favicon.png"
-		/>
-	</head>
-	<body>
-		<h1 id="title"></h1>
-		<h2 id="desc">&ZeroWidthSpace;</h2>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Page Not found!</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" type="image/png" href="../assets/favicon.png" />
+  </head>
+  <body>
+    <main>
+      <h1 style="opacity: 0" id="title">404</h1>
+      <h2 id="desc">&ZeroWidthSpace;</h2>
+    </main>
+    <p>
+      <a href="https://skfb.ly/o69Br">"Mario Question Block"</a> by PatelDev
+      <br />is licensed under
+      <a href="http://creativecommons.org/licenses/by/4.0/"
+        >Creative Commons Attribution</a
+      >.
+    </p>
+    <script type="module" src="app.js"></script>
+  </body>
 </html>
-
-<!--
-    "Mario Question Block" (https://skfb.ly/o69Br) by PatelDev is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
--->
